semantic & lint fix

--- a/angular.json
+++ b/angular.json
@@ -101,6 +101,13 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": ["tsconfig.app.json"],
+            "exclude": ["**/node_modules/**"]
+          }
         }
       }
     }
