--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "src/mat-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
@@ -110,6 +110,11 @@
           }
         }
       }
+    }
+  },
+  "schematics": {
+    "@schematics/angular:component": {
+      "style": "scss"
     }
   },
   "defaultProject": "BookStore"
